<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEEAEE"
    tools:context=".View.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".View.MainActivity">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/black">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/infoButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:backgroundTint="#EE3744"
                        app:srcCompat="@android:drawable/ic_dialog_info" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/title_spectrophotometer"
                        android:textColor="@android:color/white"
                        android:textSize="24dp" />

                </LinearLayout>

            </android.support.v7.widget.Toolbar>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="55dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/deviceInfo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="#5C5E76"
                    android:text="@string/button_spectrophotometer_information"
                    android:textColor="#EE3744" />

                <Button
                    android:id="@+id/deviceStatus"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="3"
                    android:background="#5C5E76"
                    android:text="@string/button_spectrophotometer_status"
                    android:textColor="#EE3744" />

                <Button
                    android:id="@+id/deviceReset"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:background="#5C5E76"
                    android:text="@string/button_spectrophotometer_reset"
                    android:textColor="#EE3744" />
            </LinearLayout>
        </RelativeLayout>

</FrameLayout>