<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEEAEE"
    tools:context=".View.MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/black">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">

                    <ImageButton
                        android:id="@+id/infoButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:backgroundTint="#EE3744"
                        app:srcCompat="@android:drawable/ic_dialog_info" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/title_scans_saved"
                        android:textColor="@android:color/white"
                        android:textSize="24dp" />

                </LinearLayout>

            </android.support.v7.widget.Toolbar>

            <android.support.design.widget.TabLayout
                android:id="@+id/graphTabs"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="?android:attr/actionBarSize"
                android:background="@android:color/black"
                app:tabIndicatorColor="#EE3744"
                app:tabIndicatorHeight="7dp"
                app:tabTextColor="@android:color/white">

                <android.support.design.widget.TabItem
                    android:id="@+id/graphIntensity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/intensity" />

                <android.support.design.widget.TabItem
                    android:id="@+id/graphAbsorbance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/absorbance" />

                <android.support.design.widget.TabItem
                    android:id="@+id/graphReflectance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/reflectance" />

            </android.support.design.widget.TabLayout>


            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                tools:context=".View.MainActivity">

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graphScanSavedView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>


            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="350dp"
                android:minHeight="215dp"
                tools:context=".View.MainActivity">

                <Button
                    android:id="@+id/editLabelsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="54dp"
                    android:background="#5C5E76"
                    android:text="@string/button_see_scans_saved_edit"
                    android:textColor="#EE3744" />

                <Button
                    android:id="@+id/predictSavedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:background="#5C5E76"
                    android:text="@string/button_see_scans_saved_predict"
                    android:textColor="#EE3744" />

                <ListView
                    android:id="@+id/labelsList"
                    android:layout_width="match_parent"
                    android:layout_height="132dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="75dp"
                    android:background="#DEEAEE" />


            </RelativeLayout>


        </android.support.design.widget.CoordinatorLayout>
    </ScrollView>

</FrameLayout>